# libSUFR

./: CMakeLists.txt  Doxyfile  README  code_version.sh  readme.org
CMake/: CPack_package.cmake  CompilerFlags.cmake  CompilerFlags_Fortran.cmake  FileList.cmake  SetCompileOptions.cmake
doc/: CHANGELOG  ChangeLog.txt  INSTALL  README  make
examples/: getopt_example.f90  getopt_long_example.f90
src/: angle2string.f90  angles.f90  astro.f90  binning.f90  command_line.f90  constants.f90  date_and_time.f90  dummy_variables.f90  earth.f90  empty.f90  fitting.f90  getopt.f90  interpolate.f90  kinds.f90  libSUFR.f90  math.f90  numerics.f90  optics.f90  pgplot.f90  random_numbers.f90  solvers.f90  sorting.f90  sports.f90  statistics.f90  system.f90  text.f90  text_html.f90  time2string.f90  weather.f90
